2025-03-28 Fred Gleason <fredg@paravelsystems.com>
	* Initial package creation.
2025-03-28 Fred Gleason <fredg@paravelsystems.com>
	* Added code to automatically detect the API version from the
	source tree.
2025-03-28 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in DEB packaging that incorrectly packaged arch
	dependent files on non-x66_64 architectures.
2025-03-29 Fred Gleason <fredg@paravelsystems.com>
	* Added a check for cmake(1) to the 'configure' script.
2025-03-29 Fred Gleason <fredg@paravelsystems.com>
	* Changed the build type from 'Debug' to 'Release'.