@@ -10,3 +10,6 @@
 	* Added a check for cmake(1) to the 'configure' script.
 2025-03-29 Fred Gleason <fredg@paravelsystems.com>
 	* Changed the build type from 'Debug' to 'Release'.
+2025-03-29 Fred Gleason <fredg@paravelsystems.com>
+	* Removed 'debian/source/Makefile.in'.
+	* Updated 'INSTALL'.
